--- a/prod/sass/partial/header-single.scss
+++ b/prod/sass/partial/header-single.scss
@@ -98,7 +98,7 @@
 								@include gridle(8, phoness phoness-min);
 								margin:{top:37px;}
 								@include gridle_state(notebook-min) {
-									margin:{top: 8px;}
+									margin:{top: -5px;}
 								}
 								@include gridle_state(tabless-md) {
 									padding: 6px;
@@ -171,7 +171,17 @@
 												font:{size:15px;}
 											}
 											@include gridle_state(phoness-min) {
-												font:{size:11px;}
+												font:{size:10px;}
+												padding:0 5px;
+											}
+											i {
+												font:{size: 16px;}
+												@include gridle_state(notebook-min) {
+													font:{size: 13px;}
+												}
+												@include gridle_state(phoness-min) {
+													font:{size: 11px;}
+												}
 											}
 										}
 									}	
