--- a/prod/sass/partial/footer.scss
+++ b/prod/sass/partial/footer.scss
@@ -1,9 +1,16 @@
 .footer {
+	padding: 0;
+	position: absolute;
+    right: 0;
+    bottom: 0;
 	height: 80px;
 	@include gridle(10, desktopess notebook-min);
 	@include gridle_float(right, desktopess notebook-min);
 	@include gridle(12, tabless-md phoness);
 	margin:{top:-80px;}
+	@include gridle_state(tabless) {
+		padding: 0 10px;
+	}
 	@include gridle_state(phoness) {
 		padding:0 !important;
 		margin:0;
