--- a/prod/sass/partial/page-categoria.scss
+++ b/prod/sass/partial/page-categoria.scss
@@ -39,9 +39,21 @@
 					.header-destacado {
 						@include gridle_hide(); 
 					}
-					.content-pattern {
-						@extend .pattern;
-						.highlight-inv {
+					.content-pattern-trama {
+						@include gridle(12);
+						background:{color: $second_color;position: left;repeat:repeat;}
+						padding: 10px;
+						display: inline-block;
+						background-position: -0% 0;
+						@include transition(background-position 0.5s ease-out);
+						position:relative;
+						overflow:hidden;
+						background: {color:#fff;}
+						background-color:none;
+						background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAYAAACp8Z5+AAAAH0lEQVQIW2NkQAX/GZH4/xkYGBhhAmAOSBJEwDkgAQCCrgQEqRgDDwAAAABJRU5ErkJggg==') !important;
+						background-repeat: repeat;
+						transition:none !important;
+						.bg-highlight-inv {
 							font:{size:18px;}
 							display: table;
 							@include gridle_state(notebook-min) {
@@ -73,17 +85,22 @@
 						.title {
 							margin:{top:-31px;}
 							h2 {
-								color:$second_color;
+								color:$first_color;
 								font:{size:20px;}
 								padding:{top:3px;left:10px;right:5px;}
 								text:{transform:uppercase;}
-								@include background-image (linear-gradient(to right, #000 50%, #fff 50%));
+								@include background-image (linear-gradient(to right, #fff 50%, #000 50%));
 								background:{size: 200.22% auto;position: -0% 0;}
 								@include transition(background-position 0.5s ease-out);
 								font:{style:italic;weight:400;}
 								width: auto;
 								position: absolute;
 								margin:{top: -26px !important;bottom:0;}
+							}
+							&:hover {
+								h2 {
+									color:$second_color;
+								}
 							}
 						}
 					}
@@ -117,17 +134,22 @@
 						h2 {
 							@include transition(background-position 0.5s ease-out);
 							background:{position: 99.99% 0 !important;}
-							color:$first_color !important;
+							color:$second_color !important;
 							
 						}
 					}
 					.content-single{
-						a{
-							.pattern{
+						.content-pattern-trama {
+							.bg-highlight-inv {
+								@include background-image (linear-gradient(to right, #fff 50%, #000 50%));
+								-webkit-background-size: 200.22% auto;
+								-moz-background-size: 200.22% auto;
 								@include transition(background-position 0.5s ease-out);
-								background:{position: 99.99% 0 !important;}
+								padding:{left:10px;right:5px;}
+								background-position: -99.99% 0;
+								color:$second_color;
 							}
-						}
+						}	
 					}
 				}
 			}
