--- a/prod/sass/partial/page-contacto.scss
+++ b/prod/sass/partial/page-contacto.scss
@@ -46,13 +46,13 @@
 		@include gridle_state(phoness) {
 			padding:{right: 0 !important;}
 		}
-		.cont-pattern {
-			@extend .pattern;
+		.cont-pattern-trama {
+			background-color:none;
+			background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAYAAACp8Z5+AAAAH0lEQVQIW2NkQAX/GZH4/xkYGBhhAmAOSBJEwDkgAQCCrgQEqRgDDwAAAABJRU5ErkJggg==') !important;
+			background-repeat: repeat;
 			&.title-form {
 				@include gridle(12);
 				padding:10px;
-				background: $first_color;
-				color:$second_color; 
 				@include gridle_state(tabless-md) {
 					padding: 10px !important;
 				}
@@ -61,16 +61,14 @@
 				}
 			}
 			&:hover {
-				background: {position: -99.99% 0;}
-				.trama{
-					svg{
-						pattern{
-							polygon{
-								@include animation(tramaFadea 1.10s ease forwards);
-							}
-						}
-					}
-				} 
+				.bg-highlight-inv {
+					@include background-image (linear-gradient(to right, #fff 50%, #000 50%));
+					-webkit-background-size: 200.22% auto;
+					-moz-background-size: 200.22% auto;
+					@include transition(background-position 0.5s ease-out);
+					background-position: -99.99% 0;
+					color:$second_color;
+				}
 			}
 		} 
 		.content-form {
