update css single woocomerce

--- a/prod/sassmp/main-mp.scss
+++ b/prod/sassmp/main-mp.scss
@@ -12,4 +12,5 @@
 @import 'mplace/footer';
 @import 'mplace/pages';
 @import 'mplace/single';
+@import 'mplace/lightbox';
 @import 'mplace/account';
