--- a/app/wp-content/themes/Mediakit/css/marketplace.css
+++ b/app/wp-content/themes/Mediakit/css/marketplace.css
@@ -25,7 +25,7 @@ a {
   clear: left;
   margin-top: 5px; }
 
-.destaca, .destaca2, .content-single h1 span, .related h2 span, .my-account .wrapper .content #customer_login .content-login h2 span, .my-account .wrapper .content #customer_login .content-signin h2 span, header .nav[role="navigation"] ul li span, .sidebar h3 span, .sidebar .content .products li a .price span, .content .products li a .sidebar .price span, .content h1 span {
+.destaca, .destaca2, .content-single h1 span, .related h2 span, .my-account .wrapper .content #customer_login .content-login h2 span, .my-account .wrapper .content #customer_login .content-signin h2 span, header .nav[role="navigation"] ul li span, .sidebar h3 span, .sidebar .content .products li a .price span, .content .products li a .sidebar .price span, .sidebar .content .products li small span, .content .products li .sidebar small span, .content h1 span {
   background-color: black;
   color: white;
   float: left;
@@ -101,9 +101,9 @@ header {
         min-height: 66px; }
         header .top-header .logo a::before {
           content: "";
-          background-image: url("../img/logo.svg");
+          background-image: url("../img/mediatrends-logotipe-mobile.svg");
           background-repeat: no-repeat;
-          background-size: 25%;
+          background-size: 42%;
           background-position: 5px center;
           display: table-cell;
           width: 100%; }
@@ -117,7 +117,8 @@ header {
       position: relative;
       height: 66px;
       display: table;
-      cursor: pointer; }
+      cursor: pointer;
+      border-bottom: 1px solid #000; }
       header .top-header .nav[role="navigation-shop"]:last-child {
         margin-left: 0; }
       header .top-header .nav[role="navigation-shop"] i {
@@ -196,10 +197,10 @@ header {
   display: block;
   margin-right: 2.35765%;
   width: 23.23176%;
-  padding: 34px 0 10px 10px; }
+  padding: 34px 0 10px 30px; }
   .sidebar:last-child {
     margin-right: 0; }
-  .sidebar h3, .sidebar .content .products li a .price, .content .products li a .sidebar .price {
+  .sidebar h3, .sidebar .content .products li a .price, .content .products li a .sidebar .price, .sidebar .content .products li small, .content .products li .sidebar small {
     font-size: 0.6875em;
     float: left;
     display: block;
@@ -209,9 +210,9 @@ header {
     padding: 10px 0 10px 10px;
     text-transform: uppercase;
     background-image: url("../img/bg-pattern-fino3b.svg"); }
-    .sidebar h3:last-child, .sidebar .content .products li a .price:last-child, .content .products li a .sidebar .price:last-child {
+    .sidebar h3:last-child, .sidebar .content .products li a .price:last-child, .content .products li a .sidebar .price:last-child, .sidebar .content .products li small:last-child, .content .products li .sidebar small:last-child {
       margin-right: 0; }
-    .sidebar h3 span, .sidebar .content .products li a .price span, .content .products li a .sidebar .price span {
+    .sidebar h3 span, .sidebar .content .products li a .price span, .content .products li a .sidebar .price span, .sidebar .content .products li small span, .content .products li .sidebar small span {
       color: white; }
   .sidebar .widget_shopping_cart_content .cart_list {
     float: left;
@@ -224,17 +225,27 @@ header {
       float: left;
       display: block;
       margin-right: 2.35765%;
-      width: 100%;
-      padding: 30px !important;
-      border: 1px solid #626262;
-      margin: 10px 0 5px; }
+      width: 46.26223%;
+      padding: 10px !important;
+      border: 1px solid #f6f6f6;
+      margin-top: 10px;
+      margin-right: 10px;
+      margin-bottom: 10px;
+      margin-left: 0; }
       .sidebar .widget_shopping_cart_content .cart_list li:last-child {
         margin-right: 0; }
       .sidebar .widget_shopping_cart_content .cart_list li a {
-        background-color: #f6f6f6;
-        padding: 10px 0; }
+        padding-top: 10px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap; }
         .sidebar .widget_shopping_cart_content .cart_list li a.remove {
-          background: transparent; }
+          background: transparent;
+          float: right;
+          right: 0;
+          left: initial;
+          color: black !important;
+          height: 30px; }
         .sidebar .widget_shopping_cart_content .cart_list li a img {
           margin: 0 auto;
           width: 70%;
@@ -253,14 +264,16 @@ header {
     background-color: black;
     color: white;
     border: none;
-    padding: 5px !important; }
+    padding: 10px !important;
+    text-transform: uppercase; }
     .sidebar .widget_shopping_cart_content .total:last-child {
       margin-right: 0; }
   .sidebar .widget_shopping_cart_content .buttons {
     float: left;
     display: block;
     margin-right: 2.35765%;
-    width: 100%; }
+    width: 100%;
+    margin-bottom: 20px; }
     .sidebar .widget_shopping_cart_content .buttons:last-child {
       margin-right: 0; }
     .sidebar .widget_shopping_cart_content .buttons a {
@@ -279,6 +292,7 @@ header {
       border-bottom-right-radius: 0;
       border-bottom-left-radius: 0;
       border-top-left-radius: 0;
+      padding: 10px 0;
       background: transparent;
       text-transform: uppercase;
       font-size: 0.6875em; }
@@ -310,7 +324,7 @@ header {
   margin-right: 2.35765%;
   width: 74.41059%;
   margin-right: 0;
-  padding: 0 10px 0 0;
+  padding: 0 30px 0 0;
   position: relative; }
   .content:last-child {
     margin-right: 0; }
@@ -382,7 +396,8 @@ header {
     display: block;
     margin-right: 2.35765%;
     width: 100%;
-    display: block; }
+    display: block;
+    padding: 0 20px !important; }
     .content .products:last-child {
       margin-right: 0; }
     .content .products::after {
@@ -394,11 +409,12 @@ header {
       display: block;
       margin-right: 2.35765%;
       width: 23.23176%;
-      background-color: #f6f6f6;
+      background-color: white;
       border-style: solid;
       border-width: 1px;
       border-color: #626262;
-      position: relative; }
+      position: relative;
+      padding: 10px !important; }
       .content .products li:last-child {
         margin-right: 0; }
       .content .products li:nth-child(4n) {
@@ -444,22 +460,35 @@ header {
         .content .products li a:first-child img {
           width: 75% !important;
           margin: 5px auto !important; }
-        .content .products li a h3, .content .products li a .price {
+        .content .products li a h3, .content .products li a .price, .content .products li a small {
           float: left;
           display: block;
           margin-right: 2.35765%;
           width: 100%;
-          padding: 5px !important;
           background-color: white;
           font-size: 0.9375em !important;
           color: #626262;
-          text-transform: uppercase; }
-          .content .products li a h3:last-child, .content .products li a .price:last-child {
+          text-transform: uppercase;
+          padding: 0 !important; }
+          .content .products li a h3:last-child, .content .products li a .price:last-child, .content .products li a small:last-child {
             margin-right: 0; }
         .content .products li a .price {
           font-size: 0.9375em !important;
           color: #626262 !important;
           margin-bottom: 0 !important; }
+        .content .products li a.button.product_type_simple {
+          margin-top: 20px !important;
+          padding: 15px 0; }
+      .content .products li small {
+        font-size: 0.8125em;
+        font-weight: 400;
+        color: #626262 !important;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap; }
+        .content .products li small a {
+          display: inline-block;
+          float: inherit !important; }
   .content.content-cart .shop_table {
     border-top-left-radius: 0;
     border-top-right-radius: 0;
@@ -550,16 +579,29 @@ header {
   width: 48.82117%;
   padding: 10px 0;
   text-align: center;
-  background-color: #f6f6f6;
   position: relative; }
   .content-single .img-single:last-child {
     margin-right: 0; }
-  .content-single .img-single img {
-    max-width: 85%;
-    margin: 0 auto; }
   .content-single .img-single a {
     text-align: right;
-    width: 100%; }
+    float: left;
+    display: block;
+    margin-right: 2.35765%;
+    width: 100%;
+    width: 100%;
+    height: auto;
+    display: block; }
+    .content-single .img-single a:last-child {
+      margin-right: 0; }
+  .content-single .img-single img {
+    float: left;
+    display: block;
+    margin-right: 2.35765%;
+    width: 100%;
+    margin: 0 auto;
+    background-color: #f6f6f6; }
+    .content-single .img-single img:last-child {
+      margin-right: 0; }
 .content-single .info-content {
   float: left;
   display: block;
@@ -654,11 +696,11 @@ header {
     display: block;
     margin-right: 2.35765%;
     width: 100%;
-    text-align: center;
     padding: 10px 30px;
     font-size: 0.6875em;
     color: #626262;
-    text-transform: uppercase; }
+    text-transform: uppercase;
+    line-height: 26px; }
     .content-single .info-content .product_meta:last-child {
       margin-right: 0; }
     .content-single .info-content .product_meta span i {
@@ -675,9 +717,20 @@ header {
       float: left;
       display: block;
       margin-right: 2.35765%;
-      width: 23.23176%; }
+      width: 100%; }
       .content-single .info-content .product_meta span.posted_in:last-child {
         margin-right: 0; }
+    .content-single .info-content .product_meta span.tagged_as {
+      float: left;
+      display: block;
+      margin-right: 2.35765%;
+      width: 100%; }
+      .content-single .info-content .product_meta span.tagged_as:last-child {
+        margin-right: 0; }
+      .content-single .info-content .product_meta span.tagged_as a {
+        padding: 5px;
+        background: black;
+        color: white; }
   .content-single .info-content .description {
     float: left;
     display: block;
@@ -691,7 +744,9 @@ header {
       border: none; }
     .content-single .info-content .description p {
       font-size: 0.75em;
-      color: #626262; }
+      font-weight: 300;
+      color: #626262;
+      line-height: 20px; }
 
 .related {
   float: left;
@@ -713,6 +768,51 @@ header {
     margin: 10px 0; }
     .related h2:last-child {
       margin-right: 0; }
+
+.pp_pic_holder {
+  width: 900px !important;
+  margin: 0 auto;
+  display: block;
+  left: 0 !important;
+  right: 0 !important;
+  top: 200px !important; }
+  .pp_pic_holder .ppt {
+    font-family: "Montserrat", sans-serif !important;
+    text-transform: uppercase;
+    margin: 0; }
+  .pp_pic_holder .pp_content_container {
+    border-radius: 0 !important; }
+    .pp_pic_holder .pp_content_container .pp_content {
+      max-width: 70%;
+      margin-left: auto;
+      margin-right: auto;
+      width: 70% !important; }
+      .pp_pic_holder .pp_content_container .pp_content::after {
+        clear: both;
+        content: "";
+        display: table; }
+      .pp_pic_holder .pp_content_container .pp_content #pp_full_res img {
+        width: 60% !important;
+        height: auto !important;
+        display: block;
+        margin: 0 auto; }
+    .pp_pic_holder .pp_content_container .pp_details {
+      margin: 0 auto;
+      float: none;
+      width: 300px !important;
+      text-align: center; }
+      .pp_pic_holder .pp_content_container .pp_details .pp_nav {
+        width: 100%; }
+        .pp_pic_holder .pp_content_container .pp_details .pp_nav .pp_arrow_previous {
+          float: none;
+          display: inline-block; }
+        .pp_pic_holder .pp_content_container .pp_details .pp_nav .currentTextHolder {
+          float: none;
+          display: inline-block;
+          font-size: 1.5em; }
+        .pp_pic_holder .pp_content_container .pp_details .pp_nav .pp_arrow_next {
+          float: none;
+          display: inline-block; }
 
 .my-account {
   background-color: black; }
