--- a/prod/sass/partial/vars.scss
+++ b/prod/sass/partial/vars.scss
@@ -6,6 +6,11 @@ $first_color_3:#1f1f1f;			/* 3 BLACK*/
 $second_color: #ffffff;			/* WHITE*/
 $second_color_1: #c4c4c4;		/* 2 WHITE*/
 
+$colorBlack:rgb(0,0,0);
+$colorWhite:rgb(255,255,255);
+$colorGrey:rgb(98,98,98);
+$colorGrey2:rgb(246,246,246);
+
 $bg-color:#e7e7e7;
 $font-color:#8b91a0;
 $li-border-color:#e5e9ec;
