update mediakit woocommerce

--- a/prod/sassmp/main-mp.scss
+++ b/prod/sassmp/main-mp.scss
@@ -13,4 +13,6 @@
 @import 'mplace/pages';
 @import 'mplace/single';
 @import 'mplace/lightbox';
+@import 'mplace/cart'; 
+@import 'mplace/checkout'; 
 @import 'mplace/account';
