--- a/prod/sassmp/mplace/_general.scss
+++ b/prod/sassmp/mplace/_general.scss
@@ -18,5 +18,25 @@ p{
     &.no-sidebar{
         @include span-columns(12);
         @include pad(0 10px);
+        @include media($tablet) {
+            padding: {bottom:20px !important;}
+        }
     }   
+}
+.woocommerce-message, .woocommerce-info  {
+    width: 100% !important;
+    float: left !important;
+    background: none!important;
+    border: 1px solid $colorBlack!important;
+    border-top: 6px solid $colorBlack!important; 
+    &:before {
+        color: $colorBlack !important;
+    }
+    .button {
+        background: none!important;
+        border: 1px solid $colorBlack!important;
+        border-radius: 0!important;
+        font-size: 0.8em!important;
+        text-transform: uppercase!important; 
+    }
 }
