--- a/prod/sassmp/mplace/_header.scss
+++ b/prod/sassmp/mplace/_header.scss
@@ -8,7 +8,10 @@ header{
         background:{color: #000;}
         max-height: 66px;
         .logo{
-            @include span-columns(3 of 12);
+            @include span-columns(6);
+            @include media($notebook) {
+                 @include span-columns(3 of 12);
+            }
             a{
                 display: table;
                 width:100%;
@@ -16,15 +19,27 @@ header{
                 min-height: 66px;
                 &::before{
                     content: "";
-                    background:{image:url('../img/mediatrends-logotipe-mobile.svg');repeat:no-repeat;size:42%;position: 5px center;}
+                    background:{image:url('../img/mediatrends-logotipe-mobile.svg');repeat:no-repeat;size:90%;position: 5px center;}
                     display: table-cell;
                     width: 100%;
+                    @include media($mobileLand) {
+                        background:{size:57%;} 
+                    }
+                    @include media($tablet) {
+                        background:{size:50%;} 
+                    }
+                    @include media($tabletLand) {
+                        background:{size:40%;} 
+                    }
+                    @include media($notebook) {
+                        background:{size:42%;} 
+                    }
                 }
             }
         }
         .nav[role="navigation-shop"]{
             @include direction-context(right-to-left){
-                @include span-columns(1);
+                @include span-columns(2.5);
             }
             @include textAlign(center);
             background: {color:$colorWhite}
@@ -33,6 +48,24 @@ header{
             display: table;
             cursor:pointer;
             border-bottom: 1px solid #000;
+            @include media($tablet) {
+                @include direction-context(right-to-left){
+                    @include span-columns(1.5);
+                    display: table;
+                }
+            }
+            @include media($tabletLand) {
+                @include direction-context(right-to-left){
+                    @include span-columns(1);
+                    display: table;
+                }
+            }
+            @include media($notebook) {
+                @include direction-context(right-to-left){
+                    @include span-columns(1);
+                    display: table;
+                }
+            }
             i{
                 color:$colorBlack;
                 display: table-cell;
@@ -46,11 +79,14 @@ header{
                 right:0;
                 background:{color:$colorWhite}
                 font:{size:em(12px);}
-                @include textAlign(left);
+                @include textAlign(right);
                 @include pad(40px);
                 border:{style:solid;width:1px;color:$colorGrey;right:none;top:none;}
                 @extend .hide;
                 z-index: 9;
+                @include media($notebook) {
+                    @include textAlign(left);
+                }
                 li{
                     margin:{top:30px;bottom:30px;}
                     a{
@@ -74,10 +110,33 @@ header{
         ul{
             @include span-columns(12);
             li{
-                @include span-columns(3 of 12);
+                @include span-columns(12);
+                @include omega();
                 @include pad(10px 0);
                 text:{transform:uppercase;}
-                border:{color:$colorGrey;width:1px;style:solid;top:none;left:none;bottom:none;}
+                border:none;
+                @include media($mobileLand) {
+                    @include span-columns(4.1 of 12);   
+                    border:{color:$colorGrey;width:1px;style:solid;top:none;left:none;bottom:none;}
+                    @include omega();
+                    padding:{left:5px;}
+                }
+                @include media($tablet) {
+                    @include span-columns(4.1 of 12);   
+                    border:{color:$colorGrey;width:1px;style:solid;top:none;left:none;bottom:none;}
+                    @include omega();
+                    padding:{left:10px;}
+                }
+                @include media($tabletLand) {
+                    @include span-columns(4.1 of 12);   
+                    border:{color:$colorGrey;width:1px;style:solid;top:none;left:none;bottom:none;}
+                    @include omega();
+                    padding:{left:10px;}
+                }
+                @include media($notebook) {
+                    @include span-columns(3 of 12);   
+                    border:{color:$colorGrey;width:1px;style:solid;top:none;left:none;bottom:none;}
+                }
                 span{
                     @extend .destaca;
                     font:{size: em(11);}
@@ -85,6 +144,17 @@ header{
                         font:{size: em(27);}
                         clear: left;
                     }
+                }
+                &:last-child {
+                    @include media($mobileLand) {
+                        border:none;
+                    } 
+                    @include media($tablet) {
+                        border:none;
+                    }
+                     @include media($tabletLand) {
+                        border:none;
+                    } 
                 }
             }
         }
