--- a/prod/sassmp/mplace/_pages.scss
+++ b/prod/sassmp/mplace/_pages.scss
@@ -1,8 +1,14 @@
 .content{
-    @include span-columns(9);
+    @include span-columns(12);
     @include omega();
-    @include pad(0 30px 0 0);
+    @include pad(10px);
     position: relative;
+    @include media($notebook) {
+        @include span-columns(9); 
+        @include omega();
+        @include pad(0 30px 0 0);
+        float: right;
+    }
     nav{
         &.woocommerce-breadcrumb{
             margin: 0;
@@ -30,13 +36,18 @@
         }
     }
     .woocommerce-ordering{
-        @include direction-context(right-to-left){
-            @include span-columns(3);
+        @include direction-context(right-to-left) {
+            @include span-columns(5);
         }
         position: relative;
         top:-53px;
         right:10px;
         background:{color:$colorWhite;}
+        @include media($notebook) {
+            @include direction-context(right-to-left) {
+                @include span-columns(3);
+            }
+        }
         select{
             @include span-columns(12 of 12);
             background:{color:transparent;}
@@ -68,12 +79,31 @@
         @include row();
         padding: 0 20px !important;
         li{
-            @include span-columns(3 of 12);
-            @include omega(4n);
+            width: 100% !important;
             background:{color:$colorWhite;}
             border:{style:solid;width:1px;color:$colorGrey;}
             position: relative;
             padding:10px !important;
+            margin:{bottom:20px !important;}
+            @include media($mobileLand) {
+                width: 48% !important;
+                @include omega(4n); 
+            } 
+            @include media($tablet) {
+                width: 25% !important;
+                margin:{bottom:30px !important;right:10px !important;}
+                float: left !important;
+            }
+            @include media($tabletLand) {
+                width: 25% !important;
+                margin:{bottom:30px !important;right:10px !important;}
+                float: left !important;
+            }
+            @include media($notebook) {
+                width: 25% !important;
+                @include omega(4n); 
+                margin:{bottom:30px !important;}
+            }
             a{
                 @include span-columns(12);
                 &.button{
@@ -119,10 +149,25 @@
                 }
                 &.button {
                     &.product_type_simple {
-                       margin-top: 20px !important;
-                     padding: 15px 0; 
+                        margin-top: 20px !important;
+                        padding: 15px 0; 
                     }
                 }
+                &.added_to_cart {
+                    &.wc-forward {
+                        @include span-columns(12);  
+                        @include omega();
+                        text:{align:center;transform:uppercase;} 
+                        padding: 12px 0; 
+                        margin:{top:10px;}
+                        font:{size: 0.7em;}
+                        border:1px solid $colorBlack;
+                        &:hover {
+                            background: $colorBlack;
+                            color:$colorWhite;
+                        }
+                    }
+                } 
             }
             small {
                 @extend h3;
