--- a/prod/sassmp/mplace/_single.scss
+++ b/prod/sassmp/mplace/_single.scss
@@ -7,10 +7,16 @@
         }
     }
     .img-single{
-        @include span-columns(6);
+        @include span-columns(12);
         @include pad(10px 0);
         @include textAlign(center);
         position: relative;
+        @include media($tabletLand) {
+            @include span-columns(6);
+        }
+        @include media($notebook) {
+            @include span-columns(6);
+        }
         a{
             @include textAlign(right);
             @include span-columns(12);
@@ -26,8 +32,16 @@
         }
     }
     .info-content{
-        @include span-columns(6);
+        @include span-columns(12);
         @include omega();
+        @include media($tabletLand) {
+            @include span-columns(6);
+             @include omega();
+        }
+        @include media($notebook) {
+            @include span-columns(6);
+             @include omega();
+        }
         p{
             &.disponible{
                 @include span-columns(12 of 12);
@@ -43,6 +57,10 @@
             text:{transform:uppercase;}
             @include pad(0 0 30px);
             border:{style:solid;width:1px;color:$colorGrey2;top:none;left:none;right:none;}
+            text:{align:center;}
+            @include media($notebook) {
+                text:{align:left;}
+            } 
         }
         .offers{
             @include span-columns(12 of 12);
@@ -68,6 +86,7 @@
                     display: block;
                     width: 100%;
                     height: 100%;
+                    border:1px solid $colorBlack;
                 }
             }
             button{
@@ -81,11 +100,14 @@
         }
         .product_meta{
             @include span-columns(12 of 12);
-            @include pad(10px 30px);
+            @include pad(10px 20px);
             font:{size:em(11px);}
             color:$colorGrey;
             text:{transform:uppercase;}
             line-height: 26px;
+            @include media($notebook) {
+               @include pad(10px 30px);
+            }
             span{
                 i{
                     margin:{right:5px;}
@@ -109,10 +131,15 @@
         }
         .description{
             @include span-columns(12 of 12);
+            @include pad(10px 20px);
+            @include media($notebook) {
+                @include pad(0);
+            }
             h2{
                 font:{size:em(10px);}
                 @include pad(10px 0);
                 border:none;
+                text:{align:left;}
             }
             p{
                 font:{size:em(12px);weight: 300;}
@@ -134,6 +161,12 @@
         margin:10px 0;
         span{
             @extend .destaca2;
+        }
+    }
+    &.products {
+        padding: 0 !important; 
+        @include media($notebook) {
+            @include pad(20px 0);
         }
     }
 }
