--- a/prod/sassmp/mplace/_vars.scss
+++ b/prod/sassmp/mplace/_vars.scss
@@ -6,3 +6,17 @@ $colorGrey2:rgb(246,246,246);
 
 //FONTS
 $primaryFont:'Montserrat', sans-serif;
+
+//RESPONSIVE WIDTH
+$mobile:(max-width em(320));
+$mobileLand:(min-width em(480) max-width em(690));
+$tablet:(min-width em(768) max-width em(1023));
+$tabletLand:(min-width em(1024) max-width em(1279));
+$notebook:(min-width em(1280));
+$notebookLand:(min-width em(1281) max-width em(1439));
+$desktop:(min-width em(1440));
+
+$mobileTomobileLand: (min-width em(320) max-width em(640));
+$mobileLandTotablet: (min-width em(480) max-width em(1024));
+$tabletLandTonotebook: (min-width em(1024) max-width em(1440));
+$notebookTodesktop: (min-width em(1280) min-width em(1440));
